crates/escalier_old_parser/src/snapshots/escalier_parser__tests__operations-10.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"let cond = a != b;\")"
---
Ok(
    Program {
        body: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 18,
                    },
                },
                span: 0..18,
                kind: VarDecl(
                    VarDecl {
                        pattern: Pattern {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 4,
                                },
                                end: Position {
                                    line: 0,
                                    column: 8,
                                },
                            },
                            span: 4..8,
                            kind: Ident(
                                BindingIdent {
                                    name: "cond",
                                    mutable: false,
                                    span: 4..8,
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 4,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 8,
                                        },
                                    },
                                },
                            ),
                            inferred_type: None,
                        },
                        type_ann: None,
                        init: Some(
                            Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 11,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 17,
                                    },
                                },
                                span: 11..17,
                                kind: BinaryExpr(
                                    BinaryExpr {
                                        op: NotEq,
                                        left: Expr {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 11,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 12,
                                                },
                                            },
                                            span: 11..12,
                                            kind: Ident(
                                                Ident {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 11,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 12,
                                                        },
                                                    },
                                                    span: 11..12,
                                                    name: "a",
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        right: Expr {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 16,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 17,
                                                },
                                            },
                                            span: 16..17,
                                            kind: Ident(
                                                Ident {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 16,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 17,
                                                        },
                                                    },
                                                    span: 16..17,
                                                    name: "b",
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                    },
                                ),
                                inferred_type: None,
                            },
                        ),
                        declare: false,
                    },
                ),
            },
        ],
    },
)
