crates/escalier_old_parser/src/snapshots/escalier_parser__tests__operations-12.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"-(a + b);\")"
---
Ok(
    Program {
        body: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 9,
                    },
                },
                span: 0..9,
                kind: ExprStmt(
                    Expr {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 0,
                            },
                            end: Position {
                                line: 0,
                                column: 8,
                            },
                        },
                        span: 0..8,
                        kind: UnaryExpr(
                            UnaryExpr {
                                op: Minus,
                                arg: Expr {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 2,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 7,
                                        },
                                    },
                                    span: 2..7,
                                    kind: BinaryExpr(
                                        BinaryExpr {
                                            op: Add,
                                            left: Expr {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 2,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 3,
                                                    },
                                                },
                                                span: 2..3,
                                                kind: Ident(
                                                    Ident {
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 0,
                                                                column: 2,
                                                            },
                                                            end: Position {
                                                                line: 0,
                                                                column: 3,
                                                            },
                                                        },
                                                        span: 2..3,
                                                        name: "a",
                                                    },
                                                ),
                                                inferred_type: None,
                                            },
                                            right: Expr {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 6,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 7,
                                                    },
                                                },
                                                span: 6..7,
                                                kind: Ident(
                                                    Ident {
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 0,
                                                                column: 6,
                                                            },
                                                            end: Position {
                                                                line: 0,
                                                                column: 7,
                                                            },
                                                        },
                                                        span: 6..7,
                                                        name: "b",
                                                    },
                                                ),
                                                inferred_type: None,
                                            },
                                        },
                                    ),
                                    inferred_type: None,
                                },
                            },
                        ),
                        inferred_type: None,
                    },
                ),
            },
        ],
    },
)
